# laenorweb2

./: Cargo.toml  Procfile  README.md  Rocket.toml  rust-toolchain
maploc/: maploc.cabal  stack.yaml
maploc/src/: Lib.hs  LocParser.hs
migrations/2018-11-14-000000_initial/: down.sql  up.sql
migrations/2018-11-14-212110_seed_tag_groups/: down.sql  up.sql
migrations/2018-11-15-182900_seed_tags_area/: down.sql  up.sql
migrations/2020-03-15-210600_seed_test_note/: up.sql
misc/maploc/app/: Main.hs
misc/sketch/: index.html
src/: main.rs  models.rs  schema.rs
static/css/: laenorweb.css
templates/: index.hbs  layout.hbs  note.hbs  tag.hbs
testlayouts/: note.html
