[package]
name = "laenorweb2"
version = "0.1.0"
authors = ["risto"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.9.0"
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
rocket = "0.4.2"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "handlebars_templates", "serve", "json"]
